First article and updating text etc

--- a/app/global.css
+++ b/app/global.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 ::selection {
-  background-color: #47a3f3;
+  background-color: rgb(34, 34, 34);
   color: #fefefe;
 }
 
@@ -31,6 +31,7 @@
 
 html {
   min-width: 360px;
+  background-color: rgb(16, 16, 16);
 }
 
 .prose .anchor {
